# Practice

./: git push  git push.pub
06.03.2024/Number_1/: CMakeLists.txt  Number_1.cpp  README.md
06.03.2024/Number_2/: CMakeLists.txt  Number_2.cpp  README.md
06.03.2024/Number_3/: CMakeLists.txt  Number_3.cpp  README.md
06.03.2024/Number_4/: CMakeLists.txt  Number_4.cpp
13.03.2024/Number 1/: Number 1.cpp  README.md
13.03.2024/Number 2/: Number 2.cpp  README.md
14.02.2024/: Addition.cpp  Addition.h  CMakeLists.txt  Division.cpp  Division.h  Expression.h  Multiplication.cpp  Multiplication.h  Number.cpp  Number.h  Operator.cpp  Operator.h  Subtraction.cpp  Subtraction.h  main.cpp
20.03.2024/Number 1/: CMakeLists.txt  Number 1.cpp  README.md
20.03.2024/Number 1/.PVS-Studio/: depend_info.json
20.03.2024/Number 2/: CMakeLists.txt  Number 2.cpp
20.03.2024/Number 2/.PVS-Studio/: depend_info.json
28.02.2024/Number 1/: CMakeLists.txt  README.md  class Matrix2x2.cpp  class Matrix2x2.h  main.cpp
28.02.2024/Number 2/: CMakeLists.txt  Complex_Number.cpp  Complex_Number.h  README.md  main.cpp
8.02.2024/Number_1/: README.md  №1 8.02.2024.txt
8.02.2024/Number_2/: README.md  №2 8.02.2024.txt
