cmake_minimum_required(VERSION 3.27)
project(14_02_2024)

set(CMAKE_CXX_STANDARD 23)

add_executable(14_02_2024 main.cpp
        Addition.cpp
        Addition.h
        Division.h
        Division.cpp
        Expression.cpp
        Expression.h
        Multiplication.cpp
        Multiplication.h
        Number.cpp
        Number.h
        Operator.cpp
        Operator.h
        Subtraction.cpp
        Subtraction.h)
